--- a/index.html
+++ b/index.html
@@ -3,34 +3,67 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="Evan McCarthy aka. Cheeli99">
 
-  <title>Home</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Pokemon Ribbon Tracker</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Vendor CSS Files -->
-  
+  <!-- Bootstrap core CSS -->
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="text-center">
 
-  <main id="main">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+      <div class="inner">
+        <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
+        <nav class="nav nav-masthead justify-content-center">
+          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link" href="privacy.html">Privacy Policy</a>
+          <a class="nav-link" href="credits.html">Credits</a>
+        </nav>
+      </div>
+    </header>
 
-  <h1>Hello world</h1>
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
+    <p class="lead">Keep track of how many ribbons you have and which ones you need.</p>
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer class="footer">
-    
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
+        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+      </p>
+    </div>
   </footer>
 
   <!-- Vendor JS Files -->
@@ -39,6 +72,6 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+</div>
 </body>
-
 </html>
