added a favicon to the website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <title>Pokemon Ribbon Tracker</title>
 
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -53,7 +55,7 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
-    <p class="lead">Keep track of how many ribbons you have and which ones you need.</p>
+    <p class="lead">Keep track of how many ribbons you have and which ones you need in each game.</p>
 
   </main><!-- End #main -->
 
