added game selection section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
   <title>Pokemon Ribbon Tracker</title>
 
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
-
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Bootstrap core CSS -->
@@ -57,6 +55,20 @@
     <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
     <p class="lead">Keep track of how many ribbons you have and which ones you need in each game.</p>
 
+    <!-- ======= Game Section ======= -->
+    <section id="featured" class="featured">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="icon-box">
+              <img src="assets/images/pokemon_xd&Colosseum_logos.png" class="img-fluid" alt="Picture of Pokemon XD Gale of Darkness & Colosseum logos"></img>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
