--- a/pkmn_xd_colosseum.html
+++ b/pkmn_xd_colosseum.html
@@ -35,6 +35,34 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Colosseum & XD Gale of Darkness</h1>
+  
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>National Ribbon</td>
+              <td>Purify the pokemon</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Earth Ribbon</td>
+              <td>Beat Mt. Battle in one continuous challenge</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
