--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       </div>
     </section>
-  </main><!-- End #main -->
+  </main><!-- End of main -->
 
   <!-- ======= Footer ======= -->
   <footer class="mastfoot mt-auto">
