added table of information

--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -26,16 +26,157 @@
       <div class="inner">
         <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
           <a class="nav-link" href="privacy.html">Privacy Policy</a>
           <a class="nav-link" href="credits.html">Credits</a>
         </nav>
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Pokemon Ruby Sapphire & Emerald</h1>
-  </main><!-- End of main -->
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Pokemon Ruby Sapphire & Emerald</h1>
+    
+      <section>
+        <div class="container">
+  
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>3</td>
+                <td>Champion Ribbon</td>
+                <td>Defeat the Elite 4 in Hoenn **Note: Can also be done in Pokemon FRLG</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Cool Ribbon</td>
+                <td>Win Cool Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>Cool Super Ribbon</td>
+                <td>Win Cool Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>Cool Hyper Ribbon</td>
+                <td>Win Cool Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>Cool Master Ribbon</td>
+                <td>Win Cool Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>Beauty Ribbon</td>
+                <td>Win Beauty Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>Beauty Super Ribbon</td>
+                <td>Win Beauty Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>Beauty Hyper Ribbon</td>
+                <td>Win Beauty Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>11</td>
+                <td>Beauty Master Ribbon</td>
+                <td>Win Beauty Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>12</td>
+                <td>Cute Ribbon</td>
+                <td>Win Cute Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>13</td>
+                <td>Cute Super Ribbon</td>
+                <td>Win Cute Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>14</td>
+                <td>Cute Hyper Ribbon</td>
+                <td>Win Cute Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>15</td>
+                <td>Cute Master Ribbon</td>
+                <td>Win Cute Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>16</td>
+                <td>Smart Ribbon</td>
+                <td>Win Smart Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>17</td>
+                <td>Smart Super Ribbon</td>
+                <td>Win Smart Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>18</td>
+                <td>Smart Hyper Ribbon</td>
+                <td>Win Smart Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>19</td>
+                <td>Smart Master Ribbon</td>
+                <td>Win Smart Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>20</td>
+                <td>Tough Ribbon</td>
+                <td>Win Tough Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>21</td>
+                <td>Tough Super Ribbon</td>
+                <td>Win Tough Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>22</td>
+                <td>Tough Hyper Ribbon</td>
+                <td>Win Tough Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>23</td>
+                <td>Tough Master Ribbon</td>
+                <td>Win Tough Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>24</td>
+                <td>Artist Ribbon</td>
+                <td>Beat Master Rank with a high score</td>
+              </tr>
+              <tr>
+                <td>25</td>
+                <td>Winning Ribbon</td>
+                <td>Clear the Battle Tower's Lv. 50 challenge</td>
+              </tr>
+              <tr>
+                <td>26</td>
+                <td>Victory Ribbon</td>
+                <td>Clear the Battle Tower's Lv. 100 challenge (RS) or Open Level challenge (E)</td>
+              </tr>
+            </tbody>
+          </table>
+  
+        </div>
+      </section>
+  
+      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+  
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
   <footer class="mastfoot mt-auto">
