--- a/pkmn_xd_colosseum.html
+++ b/pkmn_xd_colosseum.html
@@ -26,7 +26,7 @@
       <div class="inner">
         <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
           <a class="nav-link" href="privacy.html">Privacy Policy</a>
           <a class="nav-link" href="credits.html">Credits</a>
         </nav>
@@ -63,6 +63,9 @@
 
       </div>
     </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
