Added info into tables

--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -35,6 +35,74 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon HeartGold & SoulSilver</h1>
+
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>48</td>
+              <td>Ability Ribbon</td>
+              <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>49</td>
+              <td>Great Ability Ribbon</td>
+              <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>50</td>
+              <td>Double Ability Ribbon</td>
+              <td>Win 50 consecutive battles in Battle Tower Doubles
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>51</td>
+              <td>Multi Ability Ribbon</td>
+              <td>Win 50 consecutive battles in Battle Tower Multi.
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>52</td>
+              <td>Pair Ability Ribbon</td>
+              <td>Win 50 consecutive battles in Battle Tower Link Multi.
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>53</td>
+              <td>World Ability Ribbon</td>
+              <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
+                  **Note: Can also be done in DPPt
+              </td>
+            </tr>
+            <tr>
+              <td>54</td>
+              <td>Legend Ribbon</td>
+              <td>Defeat Red</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
