--- a/pkmn_dppt.html
+++ b/pkmn_dppt.html
@@ -35,7 +35,175 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Diamond Pearl & Platinum</h1>
-  </main><!-- End of main -->
+  
+    <section>
+        <div class="container">
+  
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>27</td>
+                <td>Cool Ribbon</td>
+                <td>Win Cool Super Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>28</td>
+                <td>Cool Super Ribbon</td>
+                <td>Win Cool Super Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>29</td>
+                <td>Cool Hyper Ribbon</td>
+                <td>Win Cool super Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>30</td>
+                <td>Cool Master Ribbon</td>
+                <td>Win Cool Super Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>31</td>
+                <td>Beauty Ribbon</td>
+                <td>Win Beauty Super Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>32</td>
+                <td>Beauty Super Ribbon</td>
+                <td>Win Beauty Super Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>33</td>
+                <td>Beauty Hyper Ribbon</td>
+                <td>Win Beauty Super Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>34</td>
+                <td>Beauty Master Ribbon</td>
+                <td>Win Beauty Super Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>35</td>
+                <td>Cute Ribbon</td>
+                <td>Win Cute Super Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>36</td>
+                <td>Cute Super Ribbon</td>
+                <td>Win Cute Super Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>37</td>
+                <td>Cute Hyper Ribbon</td>
+                <td>Win Cute Super Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>38</td>
+                <td>Cute Master Ribbon</td>
+                <td>Win Cute Super Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>39</td>
+                <td>Smart Ribbon</td>
+                <td>Win Smart Super Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>40</td>
+                <td>Smart Super Ribbon</td>
+                <td>Win Smart Super Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>41</td>
+                <td>Smart Hyper Ribbon</td>
+                <td>Win Smart Super Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>42</td>
+                <td>Smart Master Ribbon</td>
+                <td>Win Smart Super Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>43</td>
+                <td>Tough Ribbon</td>
+                <td>Win Tough Super Contest Normal Rank</td>
+              </tr>
+              <tr>
+                <td>44</td>
+                <td>Tough Super Ribbon</td>
+                <td>Win Tough Super Contest Super Rank</td>
+              </tr>
+              <tr>
+                <td>45</td>
+                <td>Tough Hyper Ribbon</td>
+                <td>Win Tough Super Contest Hyper Rank</td>
+              </tr>
+              <tr>
+                <td>46</td>
+                <td>Tough Master Ribbon</td>
+                <td>Win Tough Super Contest Master Rank</td>
+              </tr>
+              <tr>
+                <td>47</td>
+                <td>Sinnoh Champ Ribbon</td>
+                <td>Defeat the Sinnoh Elite 4</td>
+              </tr>
+              <tr>
+                <td>48</td>
+                <td>Ability Ribbon</td>
+                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+              <tr>
+                <td>49</td>
+                <td>Great Ability Ribbon</td>
+                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+              <tr>
+                <td>50</td>
+                <td>Double Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Doubles
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+              <tr>
+                <td>51</td>
+                <td>Multi Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Multi.
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+              <tr>
+                <td>52</td>
+                <td>Pair Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Link Multi.
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+              <tr>
+                <td>53</td>
+                <td>World Ability Ribbon</td>
+                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
+                    **Note: Can also be done in HGSS
+                </td>
+              </tr>
+            </tbody>
+          </table>
+  
+        </div>
+      </section>
+  
+      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
   <footer class="mastfoot mt-auto">
