--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -98,6 +98,25 @@
           </tbody>
         </table>
 
+        <p>This item below is not required but is recommended to get.</p>
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td>Shiny Crown</td>
+              <td>Talk to Ethan/Lyra after getting 5 Shiny Leaves on the mon</td>
+            </tr>
+          </tbody>
+        </table>
+
       </div>
     </section>
 
