Minor indent fix

--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -174,7 +174,8 @@
         </div>
       </section>
   
-      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+         target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
   
     </main><!-- End of main -->
 
