Added information to table

--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -35,6 +35,53 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon X & Y</h1>
+
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>55</td>
+              <td>Kalos Champion Ribbon</td>
+              <td>Defeat the Kalos Elite 4</td>
+            </tr>
+            <tr>
+              <td>56</td>
+              <td>Training Ribbon</td>
+              <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center 
+                  in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in ORAS</td>
+            </tr>
+            <tr>
+              <td>57</td>
+              <td>Skillful Battler Ribbon</td>
+              <td>Defeat a Battle Chatelaine **Note: Can also be done in ORASS
+              </td>
+            </tr>
+            <tr>
+              <td>58</td>
+              <td>Expert Battler Ribbon</td>
+              <td>Defeat a Battle Chatelaine in a Super Battle
+                  **Note: Can also be done in ORAS
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
