--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -62,7 +62,7 @@
             <tr>
               <td>57</td>
               <td>Skillful Battler Ribbon</td>
-              <td>Defeat a Battle Chatelaine **Note: Can also be done in ORASS
+              <td>Defeat a Battle Chatelaine **Note: Can also be done in ORAS
               </td>
             </tr>
             <tr>
@@ -80,7 +80,6 @@
 
     <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
        target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
-
 
   </main><!-- End of main -->
 
