--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -35,6 +35,83 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Omega Ruby & Alpha Sapphire</h1>
+  
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            
+            <tr>
+              <td>56</td>
+              <td>Training Ribbon</td>
+              <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center 
+                  in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in X & Y</td>
+            </tr>
+            <tr>
+              <td>57</td>
+              <td>Skillful Battler Ribbon</td>
+              <td>Defeat a Battle Chatelaine **Note: Can also be done in X & Y
+              </td>
+            </tr>
+            <tr>
+              <td>58</td>
+              <td>Expert Battler Ribbon</td>
+              <td>Defeat a Battle Chatelaine in a Super Battle
+                  **Note: Can also be done in X & Y
+              </td>
+            </tr>
+            <tr>
+              <td>59</td>
+              <td>Hoenn Champion Ribbon</td>
+              <td>Defeat the Hoenn Elite 4</td>
+            </tr>
+            <tr>
+              <td>60</td>
+              <td>Coolness Master Ribbon</td>
+              <td>Win Cool Contest Spectacular Master Rank</td>
+            </tr>
+            <tr>
+              <td>61</td>
+              <td>Beauty Master Ribbon</td>
+              <td>Win Beauty Contest Spectacular Master Rank</td>
+            </tr>
+            <tr>
+              <td>62</td>
+              <td>Cuteness Master Ribbon</td>
+              <td>Win Cuteness Contest Spectacular Master Rank</td>
+            </tr>
+            <tr>
+              <td>63</td>
+              <td>Cleverness Master Ribbon</td>
+              <td>Win Cleverness Contest Spectacular Master Rank</td>
+            </tr>
+            <tr>
+              <td>64</td>
+              <td>Toughness Ribbon</td>
+              <td>Win Toughness Contest Spectacular Master Rank</td>
+            </tr>
+            <tr>
+              <td>65</td>
+              <td>Contest Star Ribbon</td>
+              <td>Win in all five Master Rank categories</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+  
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
