--- a/privacy.html
+++ b/privacy.html
@@ -26,8 +26,8 @@
       <div class="inner">
         <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Home</a>
-          <a class="nav-link" href="privacy.html">Privacy Policy</a>
+          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" href="privacy.html">Privacy Policy</a>
           <a class="nav-link" href="credits.html">Credits</a>
         </nav>
       </div>
