--- a/pkmn_swsh.html
+++ b/pkmn_swsh.html
@@ -26,7 +26,7 @@
       <div class="inner">
         <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
           <a class="nav-link" href="privacy.html">Privacy Policy</a>
           <a class="nav-link" href="credits.html">Credits</a>
         </nav>
@@ -35,6 +35,43 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Sword & Shield</h1>
+
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>85</td>
+              <td>Galar Champion Ribbon</td>
+              <td>Win the Champion Cup</td>
+            </tr>
+            <tr>
+              <td>86</td>
+              <td>Tower Master Ribbon</td>
+              <td>Defeat Leon in Master Ball Rank in the Battle Tower</td>
+            </tr>
+            <tr>
+              <td>87</td>
+              <td>Master Rank Ribbon</td>
+              <td>Defeat a Master Ball Rank trainer in Ranked Battle</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
