--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -26,7 +26,7 @@
       <div class="inner">
         <h3 class="masthead-brand">Pokemon Ribbon Tracker</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
           <a class="nav-link" href="privacy.html">Privacy Policy</a>
           <a class="nav-link" href="credits.html">Credits</a>
         </nav>
@@ -35,6 +35,48 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Ultra Sun & Ultra Moon</h1>
+
+    <section>
+      <div class="container">
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>66</td>
+              <td>Alola Champion Ribbon</td>
+              <td>Defeat the Alola Elite 4</td>
+            </tr>
+            <tr>
+              <td>67</td>
+              <td>Battle Royal Master Ribbon</td>
+              <td>Win a Master Rank Battle Royal</td>
+            </tr>
+            <tr>
+              <td>68</td>
+              <td>Battle Tree Great Ribbon</td>
+              <td>Defeat a Battle Legend</td>
+            </tr>
+            <tr>
+              <td>69</td>
+              <td>Battle Tree Master Ribbon</td>
+              <td>Defeat Battle Legend in a Super Battle</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
