--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -75,6 +75,34 @@
           </tbody>
         </table>
 
+        <p>The ribbons below can be acquired in multiple gens</p>
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>70</td>
+              <td>Contest Memory Ribbon</td>
+              <td>Contest ribbons from previous gens are condensed upon transfer. If the mon has all 40, becomes gold
+                **Note: Can also be acquired in ORAS
+              </td>
+            </tr>
+            <tr>
+              <td>71</td>
+              <td>Battle Memory Ribbon</td>
+              <td>Tower ribbons from previous gens are condensed upon transfer. If the mon has all 8, becomes gold
+                **Note: Can also be acquired in ORAS
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
       </div>
     </section>
 
