--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -90,14 +90,14 @@
               <td>70</td>
               <td>Contest Memory Ribbon</td>
               <td>Contest ribbons from previous gens are condensed upon transfer. If the mon has all 40, becomes gold
-                **Note: Can also be acquired in ORAS
+                **Note: Can also be acquired in ORAS & USUM
               </td>
             </tr>
             <tr>
               <td>71</td>
               <td>Battle Memory Ribbon</td>
               <td>Tower ribbons from previous gens are condensed upon transfer. If the mon has all 8, becomes gold
-                **Note: Can also be acquired in ORAS
+                **Note: Can also be acquired in ORAS & USUM
               </td>
             </tr>
           </tbody>
