--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -170,6 +170,27 @@
               </tr>
             </tbody>
           </table>
+
+          <p>The ribbons below can be acquired in multiple gens</p>
+
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>72</td>
+                <td>Effort Ribbon</td>
+                <td>Show mon with 510 EVs at Slateport Market
+                    **Note: Can also be done in DPPt, HGSS, XY, ORAS, SwSh & BDSP
+                </td>
+              </tr>
+            </tbody>
+          </table>
   
         </div>
       </section>
