--- a/pkmn_bdsp.html
+++ b/pkmn_bdsp.html
@@ -35,6 +35,157 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Pokemon Brilliant Diamond & Shining Pearl</h1>
+
+    <section>
+      <div class="container">
+
+        <p>Below are the new ribbons in BDSP
+        </p>
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>86</td>
+              <td>Tower Master Ribbon</td>
+              <td>Defeat Palmer in Master Class in the Battle Tower **Note: Can be done in SwSh</td>
+            </tr>
+            <tr>
+              <td>88</td>
+              <td>Twinkling Star Ribbon</td>
+              <td>Be the Star of the Show in BrilliantBD / ShiningSP Super Contest Master Rank</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <p>If your Pokemon have gone through the ribbon gauntlet then these ribbons below should have been 
+           obtained in previous gens already.
+        </p>
+
+        <table class="table table-dark table-bordered table-responsive-md">
+          <thead>
+            <tr>
+              <th>Number</th>
+              <th>Ribbon</th>
+              <th>How to get</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>47</td>
+              <td>Sinnoh Champ Ribbon</td>
+              <td>Defeat the Sinnoh Elite 4</td>
+            </tr>
+            <tr>
+              <td>60</td>
+              <td>Coolness Master Ribbon</td>
+              <td>Be the Star of the Show in Cool Super Contest Master Rank</td>
+            </tr>
+            <tr>
+              <td>61</td>
+              <td>Beauty Master Ribbon</td>
+              <td>Be the Star of the Show in Beauty Super Contest Master Rank</td>
+            </tr>
+            <tr>
+              <td>62</td>
+              <td>Cuteness Master Ribbon</td>
+              <td>Be the Star of the Show in Cuteness Super Contest Master Rank</td>
+            </tr>
+            <tr>
+              <td>63</td>
+              <td>Cleverness Master Ribbon</td>
+              <td>Be the Star of the Show in Cleverness Super Contest Master Rank</td>
+            </tr>
+            <tr>
+              <td>64</td>
+              <td>Toughness Ribbon</td>
+              <td>Be the Star of the Show in Toughness Super Contest Master Rank</td>
+            </tr>
+            <tr>
+              <td>65</td>
+              <td>Contest Star Ribbon</td>
+              <td>Win the above 5 ribbons</td>
+            </tr>
+            <tr>
+              <td>72</td>
+              <td>Effort Ribbon</td>
+              <td>Show mon with 510 EVs at Sunyshore Market</td>
+            </tr>
+            <tr>
+              <td>73</td>
+              <td>Alert Ribbon</td>
+              <td>Show mon on Monday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>74</td>
+              <td>Shock Ribbon</td>
+              <td>Show mon on Tuesday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>75</td>
+              <td>Downcast Ribbon</td>
+              <td>Show mon on Wednesday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>76</td>
+              <td>Careless Ribbon</td>
+              <td>Show mon on Thursday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>77</td>
+              <td>Relax Ribbon</td>
+              <td>Show mon on Friday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>78</td>
+              <td>Snooze Ribbon</td>
+              <td>Show mon on Saturday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>79</td>
+              <td>Smile Ribbon</td>
+              <td>Show mon on Sunday in Sunyshore City</td>
+            </tr>
+            <tr>
+              <td>80</td>
+              <td>Gorgeous Ribbon</td>
+              <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area</td>
+            </tr>
+            <tr>
+              <td>81</td>
+              <td>Royal Ribbon</td>
+              <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area</td>
+            </tr>
+            <tr>
+              <td>82</td>
+              <td>Gorgeous Royal Ribbon</td>
+              <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area</td>
+            </tr>
+            <tr>
+              <td>83</td>
+              <td>Footprint Ribbon</td>
+              <td>Show mon to Dr. Footprint on Route 213</td>
+            </tr>
+            <tr>
+              <td>84</td>
+              <td>Best Friends Ribbon</td>
+              <td>Show mon with max affection in Hearthome City</td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </section>
+
+    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
+       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
   </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
