added some information into a second table

--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -186,7 +186,7 @@
                 <td>72</td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Slateport Market
-                    **Note: Can also be done in DPPt, HGSS, XY, ORAS, SwSh & BDSP
+                    **Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
