--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -71,6 +71,27 @@
           </tbody>
         </table>
 
+        <p>The ribbons below can be acquired in multiple gens</p>
+
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>72</td>
+                <td>Effort Ribbon</td>
+                <td>Show mon with 510 EVs at in Battle Royal Dome
+                    **Note: Can also be done in RSE, DPPt, HGSS, XY, SwSh & BDSP
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
       </div>
     </section>
 
