--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -100,6 +100,13 @@
                 **Note: Can also be acquired in ORAS & USUM
               </td>
             </tr>
+            <tr>
+              <td>72</td>
+              <td>Effort Ribbon</td>
+              <td>Show mon with 510 EVs in Laverre City
+                  **Note: Can also be done in RSE, DPPt, HGSS, ORAS, USUM, SwSh & BDSP
+              </td>
+            </tr>
           </tbody>
         </table>
 
