--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -117,6 +117,27 @@
           </tbody>
         </table>
 
+        <p>The ribbons below can be acquired in multiple gens</p>
+
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>72</td>
+                <td>Effort Ribbon</td>
+                <td>Show mon with 510 EVs in Blackthorn City
+                    **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
       </div>
     </section>
 
