added some more information into the second table

--- a/pkmn_dppt.html
+++ b/pkmn_dppt.html
@@ -216,6 +216,83 @@
                     **Note: Can also be done in RSE, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
+              <tr>
+                <td>73</td>
+                <td>Alert Ribbon</td>
+                <td>Show mon on Monday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>74</td>
+                <td>Shock Ribbon</td>
+                <td>Show mon on Tuesday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>75</td>
+                <td>Downcast Ribbon</td>
+                <td>Show mon on Wednesday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>76</td>
+                <td>Careless Ribbon</td>
+                <td>Show mon on Thursday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>77</td>
+                <td>Relax Ribbon</td>
+                <td>Show mon on Friday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>78</td>
+                <td>Snooze Ribbon</td>
+                <td>Show mon on Saturday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>79</td>
+                <td>Smile Ribbon</td>
+                <td>Show mon on Sunday in Sunyshore City
+                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>80</td>
+                <td>Gorgeous Ribbon</td>
+                <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area
+                    **Note: Can also be done in ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>81</td>
+                <td>Royal Ribbon</td>
+                <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area
+                    **Note: Can also be done in ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>82</td>
+                <td>Gorgeous Royal Ribbon</td>
+                <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area
+                    **Note: Can also be done in ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>83</td>
+                <td>Footprint Ribbon</td>
+                <td>Show mon with high happiness in Route 213
+                  **Note: Can also be done in XY, ORAS, USUM & BDSP
+                </td>
+              </tr>
             </tbody>
           </table>
   
