--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -135,6 +135,55 @@
                     **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
+              <tr>
+                <td>73</td>
+                <td>Alert Ribbon</td>
+                <td>Show mon on Monday at Route 40
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>74</td>
+                <td>Shock Ribbon</td>
+                <td>Show mon on Tuesday at Route 29
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>75</td>
+                <td>Downcast Ribbon</td>
+                <td>Show mon on Wednesday at Lake of Rage
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>76</td>
+                <td>Careless Ribbon</td>
+                <td>Show mon on Thursday in Route 36
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>77</td>
+                <td>Relax Ribbon</td>
+                <td>Show mon on Friday in Route 32
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>78</td>
+                <td>Snooze Ribbon</td>
+                <td>Show mon on Saturday in Blackthorn City
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>79</td>
+                <td>Smile Ribbon</td>
+                <td>Show mon on Sunday at Route 37
+                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
             </tbody>
           </table>
 
