--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -123,6 +123,90 @@
                     **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
                 </td>
               </tr>
+              <tr>
+                <td>73</td>
+                <td>Alert Ribbon</td>
+                <td>Show mon on Monday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>74</td>
+                <td>Shock Ribbon</td>
+                <td>Show mon on Tuesday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>75</td>
+                <td>Downcast Ribbon</td>
+                <td>Show mon on Wednesday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>76</td>
+                <td>Careless Ribbon</td>
+                <td>Show mon on Thursday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>77</td>
+                <td>Relax Ribbon</td>
+                <td>Show mon on Friday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>78</td>
+                <td>Snooze Ribbon</td>
+                <td>Show mon on Saturday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>79</td>
+                <td>Smile Ribbon</td>
+                <td>Show mon on Sunday in Mauville Hills
+                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>80</td>
+                <td>Gorgeous Ribbon</td>
+                <td>Buy for 10,000 pokemonies in Mauville City
+                    **Note: Can also be done in DPPt & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>81</td>
+                <td>Royal Ribbon</td>
+                <td>Buy for 100,000 pokemonies in Mauville City
+                    **Note: Can also be done in DPPt & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>82</td>
+                <td>Gorgeous Royal Ribbon</td>
+                <td>Buy for 999,999 pokemonies in Mauville City
+                    **Note: Can also be done in DPPt & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>83</td>
+                <td>Footprint Ribbon</td>
+                <td>Show mon 30 levels higher than caught/received level in Battle Resort
+                  **Note: Can also be done in DPPt, XY, USUM & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>84</td>
+                <td>Best Friends Ribbon</td>
+                <td>Show mon with max affection in Mauville Hills
+                    **Note: Can also be done in XY, USUM, SwSh & BDSP
+                </td>
+              </tr>
             </tbody>
           </table>
 
