--- a/pkmn_swsh.html
+++ b/pkmn_swsh.html
@@ -84,6 +84,13 @@
                     **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM & BDSP
                 </td>
               </tr>
+              <tr>
+                <td>84</td>
+                <td>Best Friends Ribbon</td>
+                <td>Show mon with max affection in Prism Tower
+                    **Note: Can also be done in XY, ORAS, USUM & BDSP
+                </td>
+              </tr>
             </tbody>
           </table>
 
