--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -86,7 +86,21 @@
                 <td>72</td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at in Battle Royal Dome
-                    **Note: Can also be done in RSE, DPPt, HGSS, XY, SwSh & BDSP
+                    **Note: Can also be done in RSE, DPPt, HGSS, XY, ORAS, SwSh & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>83</td>
+                <td>Footprint Ribbon</td>
+                <td>Show mon 30 levels higher than caught/received level in Hano Grand Resort
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                </td>
+              </tr>
+              <tr>
+                <td>84</td>
+                <td>Best Friends Ribbon</td>
+                <td>Show mon with max affection in Malie City
+                    **Note: Can also be done in XY, ORAS, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
