--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -107,6 +107,69 @@
                   **Note: Can also be done in RSE, DPPt, HGSS, ORAS, USUM, SwSh & BDSP
               </td>
             </tr>
+            <tr>
+              <td>73</td>
+              <td>Alert Ribbon</td>
+              <td>Show mon on Monday in Hotel Ambrette
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>74</td>
+              <td>Shock Ribbon</td>
+              <td>Show mon on Tuesday in Hotel Camphrier
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>75</td>
+              <td>Downcast Ribbon</td>
+              <td>Show mon on Wednesday in Hotel Marine Snow
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>76</td>
+              <td>Careless Ribbon</td>
+              <td>Show mon on Thursday in Hotel Coumarine
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>77</td>
+              <td>Relax Ribbon</td>
+              <td>Show mon on Friday in Hotel Couriway
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>78</td>
+              <td>Snooze Ribbon</td>
+              <td>Show mon on Saturday in Hotel Cyllage
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>79</td>
+              <td>Smile Ribbon</td>
+              <td>Show mon on Sunday in Hotel Coumarine
+                  **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>83</td>
+              <td>Footprint Ribbon</td>
+              <td>	Show mon 30 levels higher than caught/received level in Shalour City
+                **Note: Can also be done in DPPt, ORAS, USUM & BDSP
+              </td>
+            </tr>
+            <tr>
+              <td>84</td>
+              <td>Best Friends Ribbon</td>
+              <td>Show mon with max affection in Prism Tower
+                  **Note: Can also be done in ORAS, USUM, SwSh & BDSP
+              </td>
+            </tr>
           </tbody>
         </table>
 
