--- a/index.html
+++ b/index.html
@@ -44,39 +44,19 @@
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_xd_colosseum.html"><img src="assets/images/pokemon_xd&Colosseum_logos.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon XD Gale of Darkness & Colosseum logos"></a></img>
+              <a href="pkmn_xd_colosseum.html"><img src="assets/images/pokemon_xd&Colosseum_logos.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon XD Gale of Darkness & Colosseum logos"></a></img>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_rse.html"><img src="assets/images/pokemon_rse_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Ruby Sapphire & Emerald logos"></a></img>
+              <a href="pkmn_rse.html"><img src="assets/images/pokemon_rse_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Ruby Sapphire & Emerald logos"></a></img>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_dppt.html"><img src="assets/images/pokemon_dppt_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Diamond Pearl & Platinum logos"></a></img>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_xy.html"><img src="assets/images/pokemon_xy_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Pokemon X & Y logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_oras.html"><img src="assets/images/pokemon_oras_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Omega Ruby & Alpha Sapphire logos"></a></img>
+              <a href="pkmn_dppt.html"><img src="assets/images/pokemon_dppt_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Diamond Pearl & Platinum logos"></a></img>
             </div>
           </div>
         </div>
@@ -84,19 +64,39 @@
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
+              <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_swsh.html"><img src="assets/images/pokemon_swsh_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Sword & Shield logos"></a></img>
+              <a href="pkmn_xy.html"><img src="assets/images/pokemon_xy_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Pokemon X & Y logos"></a></img>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_bdsp.html"><img src="assets/images/pokemon_bdsp_logo.png" class="img-fluid mx-auto d-block" alt="Picture of Pokemon Brilliant Diamond & Shinning Pearl logos"></a></img>
+              <a href="pkmn_oras.html"><img src="assets/images/pokemon_oras_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Omega Ruby & Alpha Sapphire logos"></a></img>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 mb-4 mb-lg-4">
+            <div class="icon-box">
+              <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 mb-lg-4">
+            <div class="icon-box">
+              <a href="pkmn_swsh.html"><img src="assets/images/pokemon_swsh_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Sword & Shield logos"></a></img>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 mb-lg-4">
+            <div class="icon-box">
+              <a href="pkmn_bdsp.html"><img src="assets/images/pokemon_bdsp_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Brilliant Diamond & Shinning Pearl logos"></a></img>
             </div>
           </div>
         </div>
