--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
+              <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png" class="box-img2 img-fluid mx-auto d-block" alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
             </div>
           </div>
 
@@ -84,7 +84,7 @@
         <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-4">
             <div class="icon-box">
-              <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
+              <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png" class="box-img2 img-fluid mx-auto d-block" alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
             </div>
           </div>
 
